# chislo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.ru.md  README_EN.md
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: conversion.rs
docs/: index.html
examples/: basic.rs  date.rs  duration.rs  invoice.rs  percent.rs  receipt.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decimal.rs  money.rs  percent.rs
src/: convert.rs  currency.rs  datetime.rs  decimal.rs  decline.rs  dictionary.rs  display.rs  duration.rs  fraction.rs  lib.rs  ordinal.rs  parse.rs  percent.rs  wasm.rs
tests/: integration.rs
